src/test/resources/failing/fail61.pnd
@type Animal
@type Cat : Animal with A("A")
Cat_A(x) : int